css/bootstrap.css
/* ... */
.region-content > h1 {
	display: none;
}
.btn {
	background: rgb(66, 139, 202) !important;
	color: rgb(255, 255, 255) !important;
	border-color: rgb(53, 126, 189) !important;
	text-shadow: none !important;
}
.mform fieldset {
	border: none !important;
}
.mform .btn-cancel {
	border-radius: 3px;
}
/* This hides the breadcrumbs bar
It has to be disabled because it hides the customize button.
.navbar.clearfix {
	display: none;
}*/
.navbar {
	font-size: 12px;
}
.navbar.clearfix {
	min-height: 45px;
	height: 45px;
}
.navbar.clearfix > .navbutton > .singlebutton > form > div > .btn {
	padding: 5px 10px 6px;
	width: 180px;
	height: 30px;
}
.navbar .breadcrumb {
	padding-bottom: 0;
	margin-bottom: 0;
}
/* Not logged in homepage changes */
#home-feature {
	width: 101%;
	height: 248px !important;
}

ul.home-subfeature li.icon {
	height: 70px;
}
/* Homepage changes */
.coursename {
	font-size: 14px;
}
#frontpage-course-list > h2 {
	visibility: hidden;
	display: none;
}
.block .calendar-controls .current {
	font-size: 14px;
}
.paging.paging-morelink {
	display: none;
}
.coursebox .content .summary {
	display: none;
}
/* Calendar changes */
.calendarmonth.calendartable > thead > tr > .header {
	padding-top: 3px;
	padding-bottom: 3px;
}
.calendarmonth.calendartable > tbody > tr > td > div.day {
	font-size: 14px;
}
.calendar-controls > .current {
	font-size: 25px;
}
.minicalendar.calendartable > caption > h3 {
	font-size: 14px;
}
table.calendarmonth .calendar_event_user, table.calendarmonth .calendar_event_course {
	border-radius: 0px !important;
}
/* Hovercard thing for calendar */
.yui3-widget-hd > .eventtitle {
	font-size: 14px;
}
/* Month view fixes*/
.path-calendar .maincalendar .header {
	padding-left: 1px;
	padding-right: 1px;
}
/* Day view fixes */
.path-calendar .maincalendar .eventlist .event > tbody > tr > .picture {
	padding: 10px 0px 10px 10px;
}
.path-calendar .maincalendar .eventlist .event > tbody > tr > .picture > img {
	width: 20px;
	/* height: 20px; */
}
.path-calendar .maincalendar .eventlist .event > tbody > tr > .topic {
	padding: 10px;
}
.path-calendar .maincalendar .eventlist .event > tbody > tr > .description {
	padding-left: 10px;
	padding-right: 20px;
}
.path-calendar .maincalendar .calendar-controls .current {
	font-size: 16px;
}
/* Lightbox fixes */
#overlay {
	z-index: 9998;
	width: 100% !important;
	height: 100% !important;
}
#lightbox {
	z-index: 9999;
}
/* Label MathJax fixes */
.label {
	color: black !important;
}
/* Weird squished icons */
a > img.icon {
	width: inherit;
}
/* Survey fixes */
.path-mod-survey .surveytable td {
	text-align: center;
}
/* Message fixes */
.message .messagearea .messagehistory .notification { 
	margin-right: 22px;
}
/* Teacher view */
.iconsmall {
	width: 16px !important;
	height: 16px !important;
}
/* This is for the printer friendly icon not to overlap */
.path-mod-glossary .printicon {
	margin-right: 135px;
	margin-left: 10px;
}
/* Fix "Upcoming events" block font size */
.block {
	font-size: inherit;
}
/* TinyMCE icon fix */
.moodleSkin img.mceIcon {
	width: 30px !important;
	height: 30px !important;
}
/* Moodle dialog fix */
.moodle-dialogue-base .moodle-dialogue {
	z-index: 9999;
}
/* Teacher edit fixes */
.editing .sitetopic .section .activity .activityinstance, .editing .course-content .section .activity .activityinstance, .editing .sitetopic .section .activity .contentwithoutlink, .editing .course-content .section .activity .contentwithoutlink {
 	padding-right: 0;
}
#dndupload-status {
	z-index: 999;
}
/* search fix */
#search {  
    padding-bottom: 0px;
    padding-top: 0px;
}
/* tab fixing */
.tabrow0 > li > a {
	border-top-left-radius: 7px;
	border-top-right-radius: 7px;
}
.tabtree .tabrow0 > li {
	margin-right: 3px;
}
/* blog post fixes */
.blog_entry.blog > .row.header a {
	color: white;
}
.blog_entry.blog > .row.maincontent {
	background-color: white;
}
/* file picker fixes */
.filemanager input[type="text"], .file-picker input[type="text"] {
	line-height: 1;
}
.file-picker .fp-list .fp-repo-icon {
	padding: 0;
}
/* grade table fixes */
.pagelayout-report #report-main-content .region-content table {
	width: 100%;
}
/* not-so-transparent thingy! */
#page-footer .homelink a {
	background-color: white;
}
/* message icon on homepage */
.message > a > img.iconsmall {
	width: 12px !important;
	height: 12px !important;
}
/* forum post shifting */
.forumpost {
	margin-left: 20px;
}
/* red text is weird */
.mform .required {
	color: inherit;
}

